@@ -5,38 +5,38 @@ import rpy2.rlike.container as rlc
 
 import array
 
-class RDataFrameTestCase(unittest.TestCase):
+class DataFrameTestCase(unittest.TestCase):
 
     def testNewFromTaggedList(self):
         letters = robjects.r.letters        
         numbers = robjects.r('1:26')
-        df = robjects.RDataFrame(rlc.TaggedList((letters, numbers),
-                                                tags = ('letters', 'numbers')))
+        df = robjects.DataFrame(rlc.TaggedList((letters, numbers),
+                                               tags = ('letters', 'numbers')))
 
         self.assertEquals("data.frame", df.rclass[0])
 
     def testNewFromRObject(self):
         numbers = robjects.r('1:5')
-        self.assertRaises(ValueError, robjects.RDataFrame, numbers)
+        self.assertRaises(ValueError, robjects.DataFrame, numbers)
 
         rlist = robjects.r('list(a=1, b=2, c=3)')
-        self.assertRaises(ValueError, robjects.RDataFrame, rlist)
+        self.assertRaises(ValueError, robjects.DataFrame, rlist)
 
         rdataf = robjects.r('data.frame(a=1:2, b=c("a", "b"))')
-        dataf = robjects.RDataFrame(rdataf)        
+        dataf = robjects.DataFrame(rdataf)        
 
     def testNewFromOrdDict(self):
         od = rlc.OrdDict(c=(('a', robjects.IntVector((1,2))),
                             ('b', robjects.StrVector(('c', 'd')))
                             ))
-        dataf = robjects.RDataFrame(od)
+        dataf = robjects.DataFrame(od)
         self.assertEquals(1, dataf.rx2('a')[0])
         
     def testDim(self):
         letters = robjects.r.letters        
         numbers = robjects.r('1:26')
-        df = robjects.RDataFrame(rlc.TaggedList((letters, numbers),
-                                                tags = ('letters', 'numbers')))
+        df = robjects.DataFrame(rlc.TaggedList((letters, numbers),
+                                               tags = ('letters', 'numbers')))
         self.assertEquals(26, df.nrow)
         self.assertEquals(2, df.ncol)
 
@@ -47,7 +47,7 @@ class RDataFrameTestCase(unittest.TestCase):
         self.assertTrue(False) # no test yet
 
 def suite():
-    suite = unittest.TestLoader().loadTestsFromTestCase(RDataFrameTestCase)
+    suite = unittest.TestLoader().loadTestsFromTestCase(DataFrameTestCase)
     return suite
 
 if __name__ == '__main__':
